--- a/src/Extension/RemoteDebuggerLauncher/SecureShellRemoteLaunchProfile.xaml
+++ b/src/Extension/RemoteDebuggerLauncher/SecureShellRemoteLaunchProfile.xaml
@@ -77,4 +77,19 @@
          </NameValuePair>
       </StringProperty.Metadata>
    </StringProperty>
+
+   <StringProperty Name="dotNetInstallPath"
+                   DisplayName=".NET install path"
+                   Description="The path where .NET binary 'dotnet' is installed on the target device."
+                   Subcategory="Remote Devices"/>
+
+   <StringProperty Name="debuggerInstallPath"
+                   DisplayName="Debugger install path"
+                   Description="The path where the VS code debugger binary is installed on the target device."
+                   Subcategory="Remote Devices"/>
+
+   <StringProperty Name="appFolderPath"
+                   DisplayName="App folder path"
+                   Description="The path on the target device where the application binaries will get deployed to.."
+                   Subcategory="Remote Devices"/>
 </Rule>
