--- a/src/Extension/RemoteDebuggerLauncher.UI/Commands/InstallDotnetDialogWindow.xaml
+++ b/src/Extension/RemoteDebuggerLauncher.UI/Commands/InstallDotnetDialogWindow.xaml
@@ -11,7 +11,8 @@
                    WindowStartupLocation="CenterOwner"
                    ShowInTaskbar="False"
                    Height="Auto"
-                   d:DesignHeight="250" d:DesignWidth="800"
+                   Width="400"
+                   d:DesignHeight="190" d:DesignWidth="400"
                    d:DataContext="{d:DesignInstance Type=local:InstallDotnetViewModel}" SizeToContent="Height">
    <Grid Margin="4">
       <Grid.ColumnDefinitions>
@@ -48,7 +49,7 @@
                 SelectedItem="{Binding SelectedInstallationMode}">
          <ComboBox.ItemTemplate>
             <DataTemplate>
-               <ComboBoxItem Content="{Binding DisplayName}" ToolTip="{Binding Description}"/>
+               <TextBlock Text="{Binding DisplayName}"/>
             </DataTemplate>
          </ComboBox.ItemTemplate>
 
@@ -64,11 +65,12 @@
                 Grid.Column="1"
                 Margin="4"
                 IsReadOnly="True"
+                ToolTip="{x:Static local:Resources.InstallationTypeDescription}"
                 ItemsSource="{Binding InstallationTypes}"
                 SelectedItem="{Binding SelectedInstallationType}">
          <ComboBox.ItemTemplate>
             <DataTemplate>
-               <ComboBoxItem Content="{Binding DisplayName}" ToolTip="{Binding Description}"/>
+               <TextBlock Text="{Binding DisplayName}"/>
             </DataTemplate>
          </ComboBox.ItemTemplate>
       </ComboBox>
@@ -83,13 +85,17 @@
                 Grid.Column="1"
                 Margin="4"
                 IsEditable="True"
+                IsReadOnly="False"
+                ToolTip="{x:Static local:Resources.VersionDescription}"
                 ItemsSource="{Binding Versions}"
-                SelectedValue="{Binding SelectedVersion}">
-         <ComboBox.ItemTemplate>
+                Text="{Binding SelectedVersion}"
+                SelectedValuePath="Name"
+                DisplayMemberPath="DisplayName">
+         <!--<ComboBox.ItemTemplate>
             <DataTemplate>
-               <ComboBoxItem Content="{Binding DisplayName}" ToolTip="{Binding Description}"/>
+               <TextBlock Text="{Binding DisplayName}"/>
             </DataTemplate>
-         </ComboBox.ItemTemplate>
+         </ComboBox.ItemTemplate>-->
       </ComboBox>
 
       <!-- OK/Cancel buttons -->
