--- a/src/Extension/RemoteDebuggerLauncher/Resources/IconInstallDotnet.xaml
+++ b/src/Extension/RemoteDebuggerLauncher/Resources/IconInstallDotnet.xaml
@@ -15,14 +15,14 @@
               <GeometryDrawing Brush="{DynamicResource canvas}" Geometry="F1M16,16H0V0H16Z" />
             </DrawingGroup>
             <DrawingGroup x:Name="level_1">
-              <GeometryDrawing Brush="{DynamicResource light-defaultgrey-10}" Geometry="F1M14.52,4.5l0,7l-12,0l-0.02,-4.26l4.74,0.04l0.02,-2.79l4.09,0l3.18,0l-0.01,0.01z" />
-              <GeometryDrawing Brush="{DynamicResource light-defaultgrey}" Geometry="F1M15,4.5l0,7l-0.5,0.5l-5.5,0l0,1l2,0l0,1l-5,0l0,-1l2,0l0,-1l-5.5,0l-0.5,-0.5l0.02,-4.23l0.96,0l0.02,3.73l11,0l0,-6l-6.73,0l0,-1l7.23,0l0.5,0.5z" />
+              <GeometryDrawing Brush="{DynamicResource light-defaultgrey-10}" Geometry="F1M14.5,4.5 v 7 H 2.5 V 7 H 7 V 4.5 Z" />
+              <GeometryDrawing Brush="{DynamicResource light-defaultgrey}" Geometry="F1M15,4.5 v 7 L 14.5,12 H 9 v 1 h 2 v 1 H 6 V 13 H 8 V 12 H 2.5 L 2,11.5 V 7 h 1 v 4 H 14 V 5 H 7 V 4 h 7.5 z" />
               <GeometryDrawing Brush="{DynamicResource light-purple}">
                 <GeometryDrawing.Geometry>
                   <RectangleGeometry Rect="0,0, 6.5, 6.5"/>
                 </GeometryDrawing.Geometry>
               </GeometryDrawing>
-              <GeometryDrawing Brush="{DynamicResource light-blue}" Geometry="F1M8.84,8.9l-0.7,0l-1.95,-1.94l0.71,-0.71l1.09,1.09l0,-7.32l0.91,-0.02l0.09,7.34l1.09,-1.09l0.71,0.71l-1.95,1.95z" />
+              <GeometryDrawing Brush="{DynamicResource light-blue}" Geometry="F1M 8.9,8.9 H 8.1 L 6.2,7 6.9,6.25 8,7.356 8,0 H 9 V 7.356 L 10.1,6.25 10.8,7 Z" />
             </DrawingGroup>
           </DrawingGroup>
         </DrawingBrush.Drawing>
