--- a/samples/net6/WebAspMvc/Views/_ViewImports.cshtml
+++ b/samples/net6/WebAspMvc/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using WebApplication1
-@using WebApplication1.Models
+﻿@using WebAspMvc
+@using WebAspMvc.Models
 @using WebRazorClassLibrary
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
