--- a/src/Extension/RemoteDebuggerLauncher/ProjectSystem/Debugger/SecureShellRemoteLaunchProfile.xaml
+++ b/src/Extension/RemoteDebuggerLauncher/ProjectSystem/Debugger/SecureShellRemoteLaunchProfile.xaml
@@ -125,12 +125,12 @@
                 Subcategory="Deployment Options" />
 
   <StringProperty Name="additionalFiles"
-                  DisplayName="Additional files"
+                  DisplayName="Additional files to deploy"
                   Description="Additional files to deploy. Format: 'sourceFile1|targetPath1;sourceFile2|targetPath2' where source paths are relative to project and target paths are relative to app folder."
                   Subcategory="Additional Deployment" />
 
-  <StringProperty Name="additionalFolders"
-                  DisplayName="Additional folders"
-                  Description="Additional folders to deploy. Format: 'sourceFolder1|targetPath1;sourceFolder2|targetPath2' where source paths are relative to project and target paths are relative to app folder."
+  <StringProperty Name="additionalDirectories"
+                  DisplayName="Additional directories to deploy"
+                  Description="Additional directories to deploy. Format: 'sourceFolder1|targetPath1;sourceFolder2|targetPath2' where source paths are relative to project and target paths are relative to app folder."
                   Subcategory="Additional Deployment" />
 </Rule>
