--- a/samples/net9/UnoGuiApp/UnoGuiApp/Presentation/SecondPage.xaml
+++ b/samples/net9/UnoGuiApp/UnoGuiApp/Presentation/SecondPage.xaml
@@ -13,15 +13,7 @@
       <RowDefinition Height="Auto" />
       <RowDefinition />
     </Grid.RowDefinitions>
-    <utu:NavigationBar Content="Second Page">
-      <utu:NavigationBar.MainCommand>
-        <AppBarButton>
-          <AppBarButton.Icon>
-            <BitmapIcon UriSource="ms-appx:///UnoGuiApp/Assets/Icons/back.png" />
-          </AppBarButton.Icon>
-        </AppBarButton>
-      </utu:NavigationBar.MainCommand>
-    </utu:NavigationBar>
+    <utu:NavigationBar Content="Second Page" />
     <StackPanel Grid.Row="1"
           HorizontalAlignment="Center"
           VerticalAlignment="Center">
