--- a/samples/net8/UnoGuiApp/UnoGuiApp/Presentation/SecondPage.xaml
+++ b/samples/net8/UnoGuiApp/UnoGuiApp/Presentation/SecondPage.xaml
@@ -6,22 +6,15 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:uen="using:Uno.Extensions.Navigation.UI"
       xmlns:utu="using:Uno.Toolkit.UI"
-      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+      xmlns:um="using:Uno.Material"
+      Background="{ThemeResource BackgroundBrush}">
 
   <Grid utu:SafeArea.Insets="VisibleBounds">
     <Grid.RowDefinitions>
       <RowDefinition Height="Auto" />
       <RowDefinition />
     </Grid.RowDefinitions>
-    <utu:NavigationBar Content="Second Page">
-      <utu:NavigationBar.MainCommand>
-        <AppBarButton>
-          <AppBarButton.Icon>
-            <BitmapIcon UriSource="ms-appx:///UnoGuiApp/Assets/Icons/back.png" />
-          </AppBarButton.Icon>
-        </AppBarButton>
-      </utu:NavigationBar.MainCommand>
-    </utu:NavigationBar>
+    <utu:NavigationBar Content="Second Page" />
     <StackPanel Grid.Row="1"
           HorizontalAlignment="Center"
           VerticalAlignment="Center">
