--- a/samples/net8/UnoGuiApp/UnoGuiApp/Presentation/Shell.xaml
+++ b/samples/net8/UnoGuiApp/UnoGuiApp/Presentation/Shell.xaml
@@ -8,7 +8,7 @@
       mc:Ignorable="d"
       d:DesignHeight="300"
       d:DesignWidth="400">
-  <Border Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+  <Border Background="{ThemeResource BackgroundBrush}">
     <utu:ExtendedSplashScreen x:Name="Splash"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
